fix card view - On smaller screen width contacts' details text is cut in Card View. - The icon for Vertical Panes is swapped - (list items should be on the left and the single item should be on the right.

--- a/TelerikMvcWebMail/Content/_variables.scss
+++ b/TelerikMvcWebMail/Content/_variables.scss
@@ -3,6 +3,8 @@ $accent: #1e8edf;
 $hover: #e6e6e6;
 $hover-primary: #4ba5e5;
 
+$min-width: 1000px;
+
 @mixin selected {
     color: #fff;
     border-color: $accent;
